--- a/Problema/css/main.scss
+++ b/Problema/css/main.scss
@@ -1,8 +1,14 @@
 .mt-15{
 	margin-top: 15px;
 }
+.mt-50 {
+    margin-top: 50px;
+}
 .text-center {
 	text-align: center;
+}
+.text-left {
+    text-align: left;
 }
 .style-h1 {
 	font-size: 7rem;
@@ -33,7 +39,7 @@ header {
         &:hover {
         	color: white;
         	background-color: gray;
-        	border-radius: 50px;
+        	border-radius: 7px;
         }
 	}
 }
@@ -182,11 +188,15 @@ header {
     }
 
 }
+@mixin style-section {
+    @extend .text-center;
+    padding: 100px 0;
+    color: white; 
+}
 .about-us {
-	background-color: #2C3E50;
-	@extend .text-center;
-	padding: 100px 0;
-	color: white;
+	@include style-section;
+    background-color: #2C3E50;
+	
 
 	h1 {
 		@extend .style-h1;
@@ -208,15 +218,34 @@ header {
     img {
 			width: 80%;
 	}
+    .bar{
+        margin-top: 60px;
+
+        .progress{
+            background-color: #DCD5D5;
+            padding: 3px;
+            height: 12px;
+            border-radius: 0px;
+            margin-bottom: 0px;
+            margin-top: 15px;
+        }
+        .progress-bar{
+            background-color: #E67E22;
+        }
+        h5{
+            color: white;
+            text-align: left;
+            font-weight: 400;
+            margin-top: 4px;
+        }
+    }
 
 }
 .tips-design {
-	background-color: #27AD60;
-	padding: 100px 0;
-	@extend .text-center;
-	color: white;
-
-	h1 {
+	@include style-section;
+    background-color: #27AD60;
+	 
+    h1 {
 		@extend .style-h1;
 	}
 	hr {
@@ -226,12 +255,62 @@ header {
 	p {
 		@extend .style-p;
 	}
+    .box-a {
+        padding: 40px 0;
+        margin:50px 30px; 
+        &:hover {
+            background-color: #2A7257;
+            padding: 40px 0;
+            margin-bottom: 0;
+
+            img {
+                transform : rotate(50deg);
+                background-color: #A96931;
+                background-image: none;
+            }
+            h2 {
+                color: #A96931;
+             }
+            hr {
+                display: block;
+                border-color: #BFD5CD;
+            }
+        }
+        hr {
+            display: none;
+        }
+        h2 {
+             font-weight: 400;
+    
+        }
+        img {
+            background-image: url(../img/icon-bg.png);
+            padding: 30px;
+            background-position-x: 50%;
+            background-color: #2C3E50;
+            transition: 2s;
+
+        }
+        p {
+            color: silver;
+        }
+    }
+    .btn-danger {
+        color: #ffffff;
+        background-color: #443E44;
+        border: none;
+        padding: 10px 20px;
+        font-size: 20px;
+        transition: 0.6s;
+        &:hover {
+            background-color: white;
+            color: black; 
+        }
+    }
 }
 .team {
+    @include style-section;
 	background-color: #27AD60;
-	padding: 100px 0;
-	@extend .text-center;
-	color: white;
 
 	h1 {
 		@extend .style-h1;
@@ -261,7 +340,214 @@ header {
 			color: silver;
 			&:first-child {
                 color: #3C594A;
-			}
+		    }
 		}
+        .fa {
+            color: silver;
+            font-size: 2rem;
+            margin: 25px 10px 0 0;
+        }
 	}
+}
+.best-price-guranteed {
+    @include style-section;
+    background-color: #2C3E50;
+
+    h1 {
+       @extend .style-h1; 
+    }
+    hr {
+            @extend .separador;
+    }
+    p {
+        @extend .style-p;
+        font-size: 16px;
+    } 
+    .bg-active {
+        background-color: #8F5F38;
+    }
+    .box-precios {
+        border: 1px solid green;
+        margin-top: 100px;
+        transition: 0.7s;
+
+        &:hover {
+            margin-top: 20px;
+            border:2px solid #E67E22;
+        }
+
+        h3 {
+            font-weight: 300;
+            margin: 0;
+            padding: 18px;
+        }
+        .box-dolar {
+            background-color: #27AD60;
+            padding: 10px;
+
+            span {
+                &:first-child {
+                   font-size: 55px;
+                   font-weight: 300; 
+                }
+                font-weight: 300;
+            }
+            p {
+                font-size: small;
+            }
+        }
+
+    }
+
+    .list-group {
+        
+        font-weight: 300;
+        font-size: medium;
+        margin-bottom: 0;
+        
+        p {
+            padding: 10px;
+            margin: 0;
+        }
+        .bg-p{
+            background-color: white;
+            color: gray;
+        }
+    }
+    .btn-default {
+        margin:20%;
+        color: white;
+        background-color: #3A353A;
+        border: none;
+        padding: 10px 20px;
+        font-size: 18px;
+        font-weight: 300;
+
+    }
+
+}
+.clients-say {
+    @include style-section;
+    background-color: #2C3E50;
+
+    h1 {
+       @extend .style-h1; 
+    }
+    hr {
+        @extend .separador;
+    }
+    p {
+        @extend .style-p;
+    }
+    .box-p {
+
+        padding: 2% 19%;
+        p {
+            font-size: 20px;
+            font-style: italic;
+            color: silver;
+        }
+        .autor {
+            font-size: 20px;
+            font-style: normal;
+            color: orange;
+        }
+    } 
+}
+.formulario {
+    @include style-section;
+    background-color: #2C3E50;
+
+    
+    h1 {
+       @extend .style-h1; 
+    }
+    hr {
+        @extend .separador;
+    }
+    p {
+        @extend .style-p;
+    }
+    .form-contact {
+        width: 63%;
+        margin: auto;
+        input{
+            margin-bottom: 15px;
+            font-size: 17px;
+            padding: 20px 10px;
+        }
+        textarea {
+            font-size: 17px;
+        }
+        button {
+            color: white;
+            background-color: #3A353A;
+            border: none;
+            padding: 10px 20px;
+            font-size: 18px;
+            font-weight: 300;
+        }
+    }
+    
+}
+.redes {
+    background-image: url(../img/img-divider-img.jpg);
+    background-size: cover;
+    background-position-y: -30%;
+    padding: 250px 0 150px;
+    text-align: center;
+
+    .fa {
+        font-size: 130px;
+        color: white;
+        margin: 0 10px;
+    }
+}
+footer {
+    padding: 20px 0;
+    color: white;
+    background-color: #27AD60;
+
+    h3 {
+        text-align: center;
+    }
+    hr {
+        width: 80px;
+        border-color: white;
+    }
+    p {
+        @extend .style-p;
+    }
+    .box-footer {
+        padding: 0;
+        margin-bottom: 50px;
+
+        .btn-danger {
+           margin:0 -1px;
+           background-color: #443E44;
+           color: #E67E22;
+           border-color: #443E44;
+        }
+        .boton-suscribe .btn {
+            margin-top: 20px;
+            text-align: center;
+            color: white;
+            font-size: 17px;
+            font-weight: 300;
+        }
+    }
+    .copy {
+        color: #3D5349;
+        font-weight: 400;
+        font-size: 16px;
+    }
+    .back {
+        float: right;
+        font-weight: 300;
+        font-size: 16px;
+
+        a:hover {
+            color: black;
+        }
+    }
 }
